<resources>
    <string name="app_name">Pace</string>
    <string name="AppName">Pace</string>
    <string name="kilometers">Kilometers</string>
    <string name="pace">Pace</string>
    <string name="user_profile">User Profile</string>
    <string name="profile_stats">Profile Stats</string>
    <string name="progress">Progress</string>
    <string name="save_run_data_button">Save run data button</string>
    <string name="profile_button">Profile button</string>
    <string name="time">Time</string>
    <string name="kph">Kilometers</string>
    <string name="date">Date of Run</string>
</resources>
