<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/dataHeaderContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/distanceHeaderText"
            android:layout_width="27dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/kilometers"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/timeHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/time"
            android:textAlignment="center"

            />

        <TextView
            android:id="@+id/speedHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/kph"
            android:textAlignment="center"

            />

        <TextView
            android:id="@+id/dateHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/date"
            />

    </LinearLayout>




    <LinearLayout
        android:id="@+id/dataContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal">

        <TextView

            android:id="@+id/totalDistance"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="0.00"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/totalTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="0:00"
            android:textAlignment="center"

            />

        <TextView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="0.0 kph"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="Date"
            />


    </LinearLayout>

</LinearLayout>