<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.davidvalentin.pace.MainActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/mainActivityToolbar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        android:scrollbars="vertical"
        android:textAlignment="center"
        android:theme="@style/TopToolbarTheme">

        <RelativeLayout
            android:id="@+id/relTopToolbarContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logoIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:contentDescription="@string/AppName"
                android:src="@drawable/pace_logo_96" />

            <ImageButton
                android:id="@+id/profileBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:background="?attr/colorPrimary"
                android:onClick="onClickGoToProfileView"
                android:src="@drawable/profile_icon_96"
                android:contentDescription="@string/profile_button"
                android:theme="@style/ImageButtonThemeRight" />

            <TextView
                android:id="@+id/paceHeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/pace"
                android:theme="@style/HeaderText" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/mainActivityToolbar">


        <android.support.v7.widget.Toolbar
            android:id="@+id/bottomToolBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#2294F7"

            android:layout_alignParentBottom="true"
            app:theme="@style/BottomToolbarTheme">

            <LinearLayout
                android:id="@+id/bottomToolbarContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:background="#2294F7"
                android:orientation="horizontal"
                android:weightSum="3">

                <ImageButton
                    android:id="@+id/saveBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/colorPrimary"
                    android:onClick="onClickSaveTime"
                    android:src="@drawable/save_time_96" />

                <ImageButton
                    android:id="@+id/startBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/colorPrimary"
                    android:onClick="onClickRunOrPauseHandler"
                    android:src="@drawable/play_btn_96" />

                <ImageButton
                    android:id="@+id/restartBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/colorPrimary"
                    android:onClick="onClickRestart"
                    android:src="@drawable/restart_btn_96" />


            </LinearLayout>

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="50dp"
            >


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/distanceMeasurementText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/imageView"
                    android:text="@string/kilometers"
                    android:textAlignment="center"
                    android:theme="@style/CurrentDataHeaderText" />

                <TextView
                    android:id="@+id/timerText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/timeHeader"
                    android:text="0:00"
                    android:textAlignment="center"
                    android:theme="@style/CurrentDataText" />

                <TextView
                    android:id="@+id/timeHeader"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/distanceText"
                    android:text="Time"

                    android:textAlignment="center"
                    android:theme="@style/CurrentDataHeaderText" />

                <TextView
                    android:id="@+id/distanceText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/distanceMeasurementText"
                    android:text="0.00"
                    android:textAlignment="center"
                    android:theme="@style/CurrentDataText" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/save_run_data_button"
                    app:srcCompat="@drawable/heart_run_96" />

            </RelativeLayout>
        </LinearLayout>


    </RelativeLayout>



</RelativeLayout>
